--- a/index.html
+++ b/index.html
@@ -6,21 +6,29 @@
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href=".css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="principal">
       <div class="menu"></div>
       <div class="contenedor">
-        <div class="buscador"></div>
+        <div class="buscador">
+          <input type="text" 
+                  name="" 
+                  id="buscador" 
+                  class="inputBuscador"
+                  placeholder="Escribe la canción">
+          <i class="fa-regular fa-magnifying-glass iconoBuscar"></i>
+        </div>
         <div class="contenido" id="contenido"></div>
       </div>
       <div class="reproductor"></div>
     </div>
     
     <template id = "cardTop">
-      <div class="card" style="width: 18rem;">
-        <img src="" class="card-img-top" alt="">
-        <div class="card-body">
+      <div class="card" style="width: 33%;">
+        <img src="" class="card-img-top imgStyle" alt="">
+        <div class="card-body cardStyle">
           <p class="card-text">
             <div class="songname"></div>
             <div class="artistname"></div>
@@ -29,6 +37,10 @@
           </p>
         </div>
       </div>
+    </template>
+
+    <template id = "album">
+      <li>Nombre</li>
     </template>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
